<resources>
    <string name="app_name">NutrimosClient</string>
    <string name="action_settings">Settings</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnForgot">Forgot password</string>
    <string name="btnSignIn">Already registered? Sign In</string>
    <string name="emailEmpty">Enter email address!</string>
    <string name="passwordEmpty">Enter password!</string>
    <string name="passwordtooshort">Password too short, enter minimum 6 characters!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="auth_failed">Autentication failed</string>
    <string name="auth_completed">\"createUserWithEmail:onComplete: \"</string>
    <string name="btn_login">LOGIN</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered email to send you password reset instructions</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back">BACK</string>
    <string name="reset_successful_message">We have sent you instructions to reset your password!</string>
    <string name="reset_failed_message">Failed to send reset email!</string>
    <string name="btnSend">SEND RESET EMAIL</string>
    <string name="btnSignOut">SIGN OUT</string>
    <string name="emailSent">Email sent!</string>
    <string name="emailNotSent">Failed to send reset email!</string>
    <string name="btn_subscribe">SUBSCRIBE!</string>
    <string name="subscription_successful">Subscription successful!</string>

</resources>
