<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mario219.nutrimosandroid.presentation.view.MainActivity">

    <ProgressBar
        android:id="@+id/main_progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingLeft="@dimen/activity_horizontal_padding"
        android:paddingRight="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/main_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <Button
            android:id="@+id/main_btnSend"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnSend"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/main_btnSubscribe"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_subscribe"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/main_btnSignOut"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btnSignOut"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>